# ResourceMonitor

./: .gitignore
Client/CommandLineClient/ResourceMonitorCommandLineClient/: ResourceMonitorCommandLineClient.sln
Client/CommandLineClient/ResourceMonitorCommandLineClient/ResourceMonitorCommandLineClient/: Client.cpp  Client.h  HttpRequest.cpp  HttpRequest.h  ResourceMonitorCommandLineClient.vcxproj  ResourceMonitorCommandLineClient.vcxproj.filters  Session.cpp  Session.h  main.cpp
Frontend/: test.txt
Frontend/resource-monitor/: README.md  index.html  package-lock.json  package.json  vite.config.ts
Frontend/resource-monitor/src/: App.vue
Frontend/resource-monitor/src/assets/: base.css  main.css
Frontend/resource-monitor/src/components/: ComputerBlock.vue  ComputerStatus.vue  ComputerStatusBasicInfo.vue  ComputerStatusCPU.vue  ComputerStatusDisk.vue  ComputerStatusMemory.vue  ComputerStatusNetwork.vue  Footer.vue  Navbar.vue
Frontend/resource-monitor/src/services/: apiService.js
Frontend/test-server/: server.py
PythonDbAgent/: DatabaseManager.py  DbAgent.py  FlaskServer.py  config.py  main.py  mock.py
PythonResourceAgent/: ResourceAgent.py  ResourceMonitor.py  config.py  main.py
ResourceMonitor/: CMakeLists.txt  ResourceMonitor.sln  config.cmake
ResourceMonitor/CommandLineClient/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  Client.cpp  Client.h  CommandLineClient.vcxproj  CommandLineClient.vcxproj.filters  Config.cpp  Config.h  Controller.cpp  Controller.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  main.cpp
ResourceMonitor/CommandLineClientBeast/: CMakeLists.txt  main.cpp
ResourceMonitor/Http/: Acceptor.h  CMakeLists.txt  ClientFactory.cpp  ClientFactory.h  Factory.cpp  Factory.h  HttpCommon.cpp  HttpCommon.h  HttpCommons.cpp  HttpCommons.h  IClient.h  IServer.h
ResourceMonitor/Http/Asio/: CMakeLists.txt  HttpMessage.cpp  HttpMessage.h  HttpRequest.cpp  HttpRequest.h
ResourceMonitor/Http/Asio/Client/: CMakeLists.txt  Client.cpp  Client.h
ResourceMonitor/Http/Asio/Server/: Acceptor.cpp  Acceptor.h  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  IoService.cpp  IoService.h  Server.cpp  Server.h  Service.cpp  Service.h
ResourceMonitor/Http/Beast/: CMakeLists.txt  HttpSession.cpp  HttpSession.h
ResourceMonitor/Http/Beast/Client/: CMakeLists.txt  Client.cpp  Client.h
ResourceMonitor/Http/Beast/Server/: CMakeLists.txt  Service.cpp  Service.h  main.cpp
ResourceMonitor/Http/BoostCommon/: Acceptor.h  DatabaseManager.h  IoService.h  Server.h
ResourceMonitor/Http/Poco/: CMakeLists.txt  HttpSession.cpp  HttpSession.h  PocoCommons.cpp  ThreadPoolManager.cpp  ThreadPoolManager.h
ResourceMonitor/Http/Poco/Client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
ResourceMonitor/Http/Poco/Server/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  RequestHandler.cpp  RequestHandler.h  RequestHandlerFactory.cpp  RequestHandlerFactory.h  Server.cpp  Server.h
ResourceMonitor/RMUtils/: CMakeLists.txt  HttpMessage.cpp  HttpMessage.h  HttpMethod.cpp  HttpMethod.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  Input.cpp  Input.h  JsonAdapter.cpp  JsonAdapter.h  Log.cpp  Log.h  Logger.cpp  Logger.h  MachineState.cpp  MachineState.h  Print.cpp  Print.h  RMUtils.vcxproj  RMUtils.vcxproj.filters  Singleton.h  Utils.cpp  Utils.h  pch.h
ResourceMonitor/Server/: Acceptor.cpp  Acceptor.h  ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  Config.cpp  Config.h  Controller.cpp  Controller.h  DatabaseManager.cpp  DatabaseManager.h  Server.cpp  Server.h  Server.vcxproj  Server.vcxproj.filters  Service.cpp  Service.h  main.cpp
ResourceMonitorCMake/: CMakeLists.txt
ResourceMonitorCMake/CommandLineClient/: ArgumentParser.cpp  CMakeLists.txt  Client.cpp
ResourceMonitorCMake/RMUtils/: CMakeLists.txt  HttpMessage.cpp  HttpMessage.h  HttpRequest.cpp  HttpRequest.h
ResourceMonitorCMake/Server/: ArgumentParser.cpp  CMakeLists.txt  Controller.cpp  Controller.h  IoService.cpp  IoService.h  Server.cpp  Service.h
Server/ResourceMonitorServer/: ResourceMonitorServer.sln
Server/ResourceMonitorServer/ResourceMonitorServer/: Acceptor.cpp  Acceptor.h  ResourceMonitorServer.cpp  ResourceMonitorServer.vcxproj  ResourceMonitorServer.vcxproj.filters  Server.cpp  Server.h  Service.cpp  Service.h  main.cpp
